<resources>
    <string name="app_name">Folt</string>
    <string name="discovery">Discovery</string>
    <string name="restaurant">Restaurants</string>
    <string name="stores">Stores</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="btn_see_all">See all</string>
    <string name="all_restaurants">All restaurants</string>
    <string name="all_stores">All stores</string>
    <string name="search_restaurants_stores">Search restaurants and stores</string>
    <string name="no_results_found">No results found</string>
    <string name="hi_user">User!</string>
    <string name="no_orders">No orders</string>
    <string name="tokens">Tokens</string>
    <string name="credits">Credits</string>
    <string name="your_favs">Your favorites</string>
    <string name="quick_links">Quick links</string>
    <string name="invite_friends">Invite friends</string>
    <string name="enter_promo">Enter promo code</string>
    <string name="customer_support">Customer support</string>
    <string name="order_history">Order history</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="credits_and_tokens">Credits and Tokens</string>
    <string name="payment_methods">Payment methods</string>
    <string name="my_addresses">My addresses</string>
    <string name="saved_addresses">Saved addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="country">Country</string>
    <string name="street_address">Street name and number</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_text">User,we\'re really sorry to see you go.Are you sure you want to delete your account? Once you confirm, your data will be gone forever. </string>
    <string name="system_default_appearance">Use system default (light)</string>
    <string name="appearance_text">Choose a color mode above to change the system default appearance in the app.</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="change_appearance">Change appearance</string>
    <string name="appearance">Appearance</string>
    <string name="choose_language">Choose language</string>
    <string name="profile_picture">Profile picture</string>
    <string name="mobile_number">Mobile number</string>
    <string name="send_receipts">Send receipts to email</string>
    <string name="clear_auto_translation">Clear auto-translation settings</string>
    <string name="reset">Reset</string>
    <string name="term_service">Term of Service</string>
    <string name="accessibility">Accessibility statement</string>
    <string name="data_protection">Data protection</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow marketing notifications</string>
    <string name="device_settings">Device settings</string>
    <string name="limit_tracking">Limit tracking</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="folt_version">Folt version</string>
    <string name="android_version">Android version</string>
    <string name="licenses">Licenses</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="address">Address</string>
    <string name="opening_now">Not it is open</string>
    <string name="opening_time">Opening time</string>
    <string name="direction">Directions</string>
    <string name="delivery_information">Delivery information</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="small_order_limit">Small order surcharge limit</string>
    <string name="delivery_time">Estimated delivery time</string>
    <string name="contact_info">Contact info</string>
    <string name="venue_information_text">If you have allergies or dietary restrictions, please contact the restaurant for dish-specific information.</string>
    <string name="restaurant_">Restaurant</string>
    <string name="website">Website</string>
    <string name="folt_support">Folt support</string>
    <string name="open_site">Open site</string>
    <string name="open_chat">Open chat</string>
    <string name="fastest_delivery">Fastest delivery</string>
    <string name="more">More</string>
    <string name="edit_delivery_location">Edit delivery location</string>
    <string name="location_type">Location type</string>
    <string name="location_tip">The location type helps us to find you better.</string>
    <string name="address_details">Address details</string>
    <string name="building_name">Building name</string>
    <string name="optional">Optional</string>
    <string name="entrance_staircase">Entrance / Staircase</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="door_code">Door code</string>
    <string name="other_instructions">Other instructions for the courier</string>
    <string name="save_address">Save address</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="no_contact_delivery">No-contact delivery</string>
    <string name="no_contact_text">Please leave the order in front of my door</string>
    <string name="prices_in">Prices in</string>
    <string name="item_subtotal">Item subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="service_fee">Service fee</string>
    <string name="total">Total</string>
    <string name="complete">Complete</string>
    <string name="browse_restaurants_stores">Browse restaurants and stores</string>
    <string name="system_lang">System language</string>
    <string name="menu_title">Menu Title</string>
    <string name="add_to_order">Add to order    10,90 $</string>
    <string name="take_photo">Take photo</string>
    <string name="photo_library">Photo library</string>
    <string name="delete_profile_picture">Delete profile picture</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="welcome">Welcome to Folt</string>
    <string name="signIn_text">Enjoy the best restaurants or get what you need from nearby stores, delivered</string>
    <string name="getStartedBtn">Get started</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="phone_number">Phone number</string>
    <string name="tel_example">+1-212-456-7890</string>
    <string name="password">Password</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_account">Don\'t have an account</string>
    <string name="try_again_later">An error occurred. Please try again later.</string>
    <string name="hi">Hi</string>
</resources>