<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.deleteaccount.DeleteAccountFragment">


    <LinearLayout
        android:id="@+id/back_btn"
        android:padding="5dp"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_linear_background"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            />
    </LinearLayout>

    <TextView
        android:layout_below="@id/back_btn"
        android:id="@+id/add_new_address_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />
            <TextView
                android:layout_below="@id/add_new_address_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:textColor="@color/black"
                android:layout_margin="8dp"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:textColor="@color/delete_btn_enabled_color"
        android:backgroundTint="@color/delete_btn_bg_color"
        android:text="@string/save"
        app:cornerRadius="4dp" />

</RelativeLayout>