<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_venue_information_scene"
    tools:context=".presentation.venueinformation.VenueInformationFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/restaurant_linear"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/restaurant_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:textSize="30sp"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:id="@+id/restaurant_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:textSize="18sp"
                android:fontFamily="@font/arial"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:id="@+id/restaurant_address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/arial"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/address_text"
                    android:fontFamily="@font/arial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="3"
                    android:textAlignment="textEnd"
                    android:id="@+id/direction_text"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direction"
                    android:textSize="17sp"
                    android:textColor="@color/open_blue"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/opening_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_time"
                android:textSize="22sp"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_margin="8dp"
                android:id="@+id/opening_boolean"
                android:fontFamily="@font/arial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="17sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/delivery_information_text"
                android:layout_width="match_parent"
                android:fontFamily="@font/arial"
                android:layout_height="wrap_content"
                android:text="@string/delivery_information"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/restaurant_delivery_area"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/arial"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_cost"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="3"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:id="@+id/delivery_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2.80m"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
<!--            <LinearLayout-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->
<!--                <TextView-->
<!--                    android:layout_weight="1"-->
<!--                    android:id="@+id/small_order_limit"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/small_order_limit"-->
<!--                    android:textSize="17sp"-->
<!--                    android:textColor="@color/black"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:layout_weight="3"-->
<!--                    android:textAlignment="textEnd"-->
<!--                    android:id="@+id/small_order_amount"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="6.00m"-->
<!--                    android:textSize="17sp"-->
<!--                    android:textColor="@color/black"-->
<!--                    />-->
<!--            </LinearLayout>-->
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial"
                    android:text="@string/delivery_time"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="3"
                    android:textAlignment="textEnd"
                    android:id="@+id/delivery_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:text="20-30 min"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/contact_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:textSize="22sp"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_margin="8dp"
                android:fontFamily="@font/arial"
                android:id="@+id/contact_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_information_text"
                android:textSize="17sp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_"
                    android:fontFamily="@font/arial"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+994778278438"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/open_blue"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial"
                    android:text="@string/website"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="3"
                    android:textAlignment="textEnd"
                    android:id="@+id/open_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_site"
                    android:textSize="17sp"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:textColor="@color/open_blue"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
               />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/folt_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/folt_support"
                    android:textSize="17sp"
                    android:fontFamily="@font/arial"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_weight="3"
                    android:textAlignment="textEnd"
                    android:id="@+id/open_chat"
                    android:fontFamily="@font/arial"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_chat"
                    android:textSize="17sp"
                    android:textColor="@color/open_blue"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:translationY="-80dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:titleTextColor="@color/black">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">


                    <TextView
                        android:id="@+id/toolbar_venue_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/account"
                        android:fontFamily="@font/arial"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/search_linear_background"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back" />
    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>