<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.newaddress.NewAddressFragment">

    <LinearLayout
        android:id="@+id/back_btn"
        android:padding="5dp"
        android:layout_below="@id/fragment"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_linear_background"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            />
    </LinearLayout>
    <fragment
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_below="@id/back_btn"
        android:id="@+id/add_new_address_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_address"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />
<androidx.cardview.widget.CardView
    android:id="@+id/new_address_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/add_new_address_textview"
    android:elevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/country_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_down"
        android:padding="4dp"
        android:layout_gravity="end|center"
        android:layout_margin="8dp"/>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/street_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_address_cardView"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street_address"
            android:textColor="@color/dark_gray"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_margin="4dp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:backgroundTint="@color/open_blue"
        android:text="@string/next"
        app:cornerRadius="4dp" />

</RelativeLayout>